# antigravity-auth

./: .gitignore  README.md  pyproject.toml  test_server.py
cli/: __init__.py  main.py
src/: __init__.py
src/antigravity/: client.py  server.py  service.py  storage.py
src/antigravity_auth/: __init__.py  accounts.py  client.py  constants.py  oauth.py  server.py  service.py  storage.py  token.py
src/antigravity_auth/api_server/: api.py  schemas.py
src/antigravity_auth/cli/: __init__.py  main.py
tests/: test_simple_prompt.py
