[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "antigravity-auth"
version = "0.1.0"
description = "Python port of opencode-antigravity-auth for cookie-based Gemini/Claude authentication"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Tri Firdyanto" }
]
keywords = [
    "antigravity",
    "gemini",
    "claude",
    "oauth",
    "authentication",
    "google",
    "ai",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.25.0",
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "filelock>=3.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
server = [
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
]

[project.scripts]
antigravity = "antigravity_auth.cli.main:main"

[project.urls]
Homepage = "https://github.com/firdyfirdy/opencode-antigravity-auth"
Repository = "https://github.com/firdyfirdy/opencode-antigravity-auth"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
]

[tool.hatch.build.targets.wheel]
packages = ["src/antigravity_auth"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
